--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -104,6 +104,16 @@ android {
     }
 }
 
+dependencies {
+    // The version of react-native is set by the React Native Gradle Plugin
+    implementation("com.facebook.react:react-android")
+
+    if (hermesEnabled.toBoolean()) {
+        implementation("com.facebook.react:hermes-android")
+    } else {
+        implementation jscFlavor
+    }
+}
 
 //project.ext.vectoricons = [
 //    iconFontNames: [ 'Roboto-Light.ttf', 'Roboto-BlackItalic.ttf', 'MaterialIcons.ttf' ]
