--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native": "0.74.1",
     "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "^2.16.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -36,6 +38,7 @@
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^10.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
