- Update app.json to include Google Mobile Ads configuration for Android and iOS. - Update package.json to add the react-native-google-mobile-ads dependency.
refactor: Add AdMob interstitial ad to App component

- Add interstitial ad functionality to the App component.
- Load and show interstitial ad when the app is opened every fourth time.
- Handle ad events such as ad loaded, closed, and error.

refactor: Update Android resources

- Add themes.xml file to define the application theme.
- Update strings.xml to change the app name to "My Application".
- Add ic_launcher_background.xml file to define the launcher background color.
- Add colors.xml file to define custom colors.
- Add ic_launcher_foreground.xml file to define the launcher foreground vector.

refactor: Update AndroidManifest.xml

- Add meta-data tag to include the AdMob App ID.

refactor: Update App.tsx

- Add APP_OPEN_COUNT_KEY and APP_ADMOB_INTERSTITIAL_ID constants.
- Create a state variable to track if the interstitial ad is loaded.
- Implement a function to get the app open count from AsyncStorage.
- Create an interstitial ad instance and add event listeners for ad loaded, closed, and error.
- Fetch the app open count and determine if the ad should be shown.
- Show the interstitial ad when the app is opened every fourth time.
- Clean up event listeners when the component is unmounted.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,11 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+<!-- Add your AdMob App ID -->
+    <meta-data
+      android:name="com.google.android.gms.ads.APPLICATION_ID"
+      android:value="ca-app-pub-9160717670483486~6852476741"/>
+
     </application>
 </manifest>
