--- a/app.json
+++ b/app.json
@@ -1,4 +1,8 @@
 {
   "name": "ToDoApp",
-  "displayName": "ToDoApp"
+  "displayName": "ToDoApp",
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-9160717670483486~6852476741",
+    "ios_app_id": "ca-app-pub-yyyyyyyyyyyyyyy~xxxxxxxxxx"
+  }
 }
