--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^14.2.5",
+    "react-native-orientation-locker": "^1.7.0",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
