--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "date-fns": "^3.6.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-date-picker": "^5.0.4",
-    "react-native-gesture-handler": "^2.16.2",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^14.2.5",
     "react-native-orientation-locker": "^1.7.0",
-    "react-native-safe-area-context": "^4.10.4",
+    "react-native-reanimated": "^3.16.2",
+    "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "uuid": "^10.0.0"
