--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.31.1",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-vector-icons": "^10.1.0",
     "uuid": "^10.0.0"
   },
