--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-calendars": "^1.1307.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^5.0.4",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-mobile-ads": "^14.2.5",
     "react-native-orientation-locker": "^1.7.0",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.10.1",
     "react-native-switch-selector": "^2.3.0",
     "react-native-vector-icons": "^10.1.0",
     "uuid": "^10.0.0"
